Add login and register.
* Add request method from utils.
* Add link on main page.
* Add session login.
* Add logout.
* Allow delete and put methods.

--- a/11.1-page/Source/View/index.html
+++ b/11.1-page/Source/View/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Minha Página</h1>
     <p>Texto teste</p>
+    <a href="perfil">Perfil</a>
+    <a href="entrar">Entrar</a>
+    <a href="cadastro">Cadastrar</a>
 </body>
 </html>
