--- a/11.1-page/Source/View/login.html
+++ b/11.1-page/Source/View/login.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página</title>
     <base href="Source/View/">
-    <script type="module" src="js/profile.js" async></script>
+    <script type="module" src="js/login.js" async></script>
 </head>
 <body>
-    <h1>Perfil</h1>
-    <p>Usuário: <span>{{name}}</span></p>
-    <p>E-mail: <span>{{email}}</span></p>
-    <button>Logout</button>
+    <label>Email: <input id="email"></label>
+    <label>Senha: <input id="password"></label>
+    <button>Login</button>
 </body>
 </html>
