--- a/11.1-page/Source/View/register.html
+++ b/11.1-page/Source/View/register.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página</title>
     <base href="Source/View/">
-    <script type="module" src="js/profile.js" async></script>
+    <script type="module" src="js/register.js" async></script>
 </head>
 <body>
-    <h1>Perfil</h1>
-    <p>Usuário: <span>{{name}}</span></p>
-    <p>E-mail: <span>{{email}}</span></p>
-    <button>Logout</button>
+    <label>Nome: <input id="name"></label>
+    <label>Email: <input id="email"></label>
+    <label>Senha: <input id="password"></label>
+    <button>Cadastrar</button>
 </body>
 </html>
