--- a/12.1-JS-EX-1/Source/View/index.html
+++ b/12.1-JS-EX-1/Source/View/index.html
@@ -29,7 +29,8 @@
         <input id="description" type="text" placeholder="description">
         <input id="price" type="text" placeholder="price">
         <input id="quantity" type="text" placeholder="quantity">
-        <button>Insert new product</button>
+        <input id="image" type="text" placeholder="image url">
+        <button id="insert">Insert new product</button>
     </section>
 
     <section id="change">
@@ -38,6 +39,7 @@
         <input id="description" type="text" placeholder="description">
         <input id="price" type="text" placeholder="price">
         <input id="quantity" type="text" placeholder="quantity">
+        <input id="image" type="text" placeholder="image url">
         <button>Change product info</button>
     </section>
 </body>
