--- a/12.1-JS-EX-2/Source/View/index.html
+++ b/12.1-JS-EX-2/Source/View/index.html
@@ -7,13 +7,18 @@
     <title>Produtos</title>
     <base href="Source/View/">
 
+    <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/index.css">
 
-    <script type='text/javascript' src='https://livejs.com/live.js' async></script>
+    <!-- <script type='text/javascript' src='https://livejs.com/live.js' async></script> -->
     <script type='module' src='js/index.js' async></script>
 </head>
 <body>
-    <div id="carousel-container"></div>
-    <div id="list-container"></div>
+    <header><div id="cart-button">🛒</div></header>
+    <div id="frame">
+        <div id="carousel-container"></div>
+        <div id="list-container"></div>
+    </div>
 </body>
 </html>
